syntax = "proto3";

package user;

option go_package = "./services/user-service";

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message RegisterUserRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}

message RegisterUserResponse {
    User user = 1;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    User user = 1;
}

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc GetUser(GetUserRequest) returns(GetUserResponse);
}

